apps/jellystat/deployment-jellystat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellystat
  name: jellystat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellystat
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellystat
    spec:
      containers:
        - image: cyfershepard/jellystat:1.1.2
          name: jellystat
          resources: {}
          ports:
            - 3000
          volumeMounts:
            - mountPath: /app/backend/backup-data
              name: jellystat
      restartPolicy: Always
      volumes:
        - name: jellystat-backup
          persistentVolumeClaim:
            claimName: jellystat-backup
