apps/jellystat/ingress-jellystat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellystat
spec:
  ingressClassName: nginx
  rules:
  - host: jellystat.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: jellystat
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - jellystat.almothana.xyz
      secretName: almothana-xyz-tls
